# gosk

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  gosk.go  gosk.peg  gosk.peg.go  main.go  scan.go  scan.peg  scan.peg.go  spec.md
ast/: ast.go  ast_helper.go  ast_interface.go  ast_lit.go  ast_statements.go
cmd/f12copy/: main.go
cmd/f12format/: Makefile  main.go
cmd/gosk/: main.go
eval/: 01_day_eval_test.go  02_day_eval_test.go  03_day_eval_test.go  eval.go  eval_add.go  eval_and.go  eval_cmp.go  eval_dbdwdd.go  eval_detect_token.go  eval_dump_helper.go  eval_global.go  eval_imul.go  eval_in.go  eval_labels.go  eval_modrm.go  eval_mov.go  eval_or.go  eval_out.go  eval_setting.go  eval_shr.go  eval_stmt_test.go  eval_sub.go  eval_test.go  eval_util.go
f12/: normal_floppy.go
lexer/: asmhead.nas  lexer.go  lexer_asmhead_test.go  lexer_func_test.go  lexer_load_file_test.go  lexer_test.go
object/: object.go  object_test.go
parser/: parser.go  parser_main.go  parser_parse_opcode.go  parser_parse_stmt.go  parser_parse_stmt_test.go
repl/: repl.go
src/: gosk.peg  gosk.peg.go  parser.go  parser.go.y
testdata/: 03_day_harib00f_haribote.nas  03_day_harib00g_haribote.nas  03_day_harib00h_haribote.nas  asmhead.nas  byte-opcode.list  byte-opcode.nas
token/: token.go
